Posicionando a imagem do ombro

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
 	<center><img src="planoB.png"></center>
 
+	<SPAN style="position: absolute; top:190px; right:550px;">
 	<img src="shoulder.png" width="55" height="50">
+	</SPAN>
+
 </body>
 
 </html>
