--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 	<img src="shoulder.png" width="55" height="50">
 	</SPAN>
 
+	<SPAN style="position: absolute; top:505px; right:750px;">
 	<img src="knee.png" width="55" height="50">
+	</SPAN>
 
 </body>
 
